# condor

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE
condor-client/: Cargo.toml
condor-client/src/: commands.rs  main.rs  render.rs
condor-common/: Cargo.toml  build.rs
condor-common/proto/: condor_common.proto
condor-common/src/: error.rs  grpc_client.rs  lib.rs  opencode_client.rs  opencode_error.rs  render.rs  types.rs
condor-common/src/opencode_client/: app.rs  auth.rs  command.rs  config.rs  experimental.rs  file.rs  find.rs  formatter.rs  global.rs  instance.rs  lsp.rs  mcp.rs  mod.rs  path.rs  permission.rs  project.rs  provider.rs  pty.rs  question.rs  session.rs  sync.rs  tui.rs  v2.rs  vcs.rs
condor-executor/: Cargo.toml
condor-executor/src/: main.rs
condor-opencode/: Cargo.toml
condor-opencode-tui/: Cargo.toml
condor-opencode-tui/src/: main.rs
condor-opencode/src/: main.rs
condor-opencode/src/cli/: app.rs  auth.rs  command.rs  config.rs  experimental.rs  file.rs  find.rs  formatter.rs  global.rs  instance.rs  lsp.rs  mcp.rs  mod.rs  path.rs  permission.rs  project.rs  provider.rs  pty.rs  question.rs  session.rs  sync.rs  tui.rs  v2.rs  vcs.rs
condor-server/: Cargo.toml
condor-server/src/: error.rs  main.rs  nats.rs  redis_store.rs  service.rs
docs/superpowers/plans/: 2026-06-14-condor-executor.md  2026-06-15-condor-opencode-plan.md  2026-06-15-condor-opencode-tui-plan.md
docs/superpowers/specs/: 2026-06-14-condor-executor-design.md  2026-06-15-condor-executor-rest-design.md  2026-06-15-condor-opencode-design.md  2026-06-15-condor-opencode-tui-design.md
