[workspace]
resolver = "2"
members = ["condor-common", "condor-server", "condor-client"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
thiserror = "2"
clap = { version = "4", features = ["derive"] }
redis = { version = "0.28", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
minijinja = "2"
condor-common = { path = "condor-common" }
tonic = "0.12"
prost = "0.13"
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
progenitor = { git = "https://github.com/oxidecomputer/progenitor" }
progenitor-client = { git = "https://github.com/oxidecomputer/progenitor" }
serde_json = "1"
reqwest = { version = "0.13", default-features = false, features = ["json", "query", "stream"] }
regress = "0.4.1"
