[package]
name = "condor-common"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror.workspace = true
serde_yaml.workspace = true
serde.workspace = true
tonic.workspace = true
prost.workspace = true
progenitor.workspace = true
progenitor-client.workspace = true
reqwest.workspace = true
serde_json.workspace = true
regress.workspace = true
futures.workspace = true

[build-dependencies]
tonic-build = "0.12"
serde_json.workspace = true
openapiv3 = "2"
progenitor.workspace = true
