[package]
name = "condor-server"
version = "0.1.0"
edition = "2024"

[dependencies]
condor-common.workspace = true
thiserror.workspace = true
tokio.workspace = true
clap.workspace = true
redis.workspace = true
tonic.workspace = true
uuid.workspace = true
async-nats.workspace = true
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
